--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
 <body>
     <div class="container">
         <div class="slider">
-            <div class="items_container">
-                <div class= "my_img">
-                    <img src="consegna/img/01.webp" alt="">
-                </div>
+            <div id="items_container">
+
                 <div class="arrow" id="previous">
-                    <i class="fa-solid fa-arrow-up"></i>
+                    <i class="fa-solid fa-arrow-down"></i>
                 </div>
                 <div class="arrow" id="next">
-                    <i class="fa-solid fa-arrow-down"></i>
+                    <i class="fa-solid fa-arrow-up"></i>
                 </div>
             </div>
         </div>
